# gothic-api

./: .gitignore  CMakeLists.txt  GothicAPIConfig.cmake.in  README.md
.github/workflows/: gitlab-sync.yml
ZenGin/: zGothicAPI.cpp  zGothicAPI.h
ZenGin/DirectX7/include/: d3dtypes.h  d3dxmath.h
ZenGin/DirectX8/include/: d3dtypes.h  d3dx8math.h  d3dxmath.h
ZenGin/Gothic_II_Addon/: G2A.h  GlobalVariables.h  StaticsProperties.h
ZenGin/Gothic_II_Addon/API/: oAiHuman.h  oAiShoot.h  oAniCtrl.h  oBarrier.h  oBinkPlayer.h  oCollisionObjectMiscChar.h  oCsManager.h  oCsPlayer.h  oCsProps.h  oCsTrigger.h  oDialog.h  oDoc.h  oDocumentManager.h  oFocus.h  oGame.h  oGameInfo.h  oGameManager.h  oGuilds.h  oHelp.h  oInfo.h  oInformationManager.h  oInventory.h  oItem.h  oItemReact.h  oLogManager.h  oMagFrontier.h  oMagic.h  oMenuSavegame.h  oMenu_Help.h  oMenu_Main.h  oMenu_Status.h  oMission.h  oMobInter.h  oMusicZone.h  oNews.h  oNpc.h  oNpcMessages.h  oNpcStates.h  oObjFactory.h  oParticleControl.h  (+154 more)
ZenGin/Gothic_II_Classic/: G2.h  GlobalVariables.h  StaticsProperties.h
ZenGin/Gothic_II_Classic/API/: oAiHuman.h  oAiShoot.h  oAniCtrl.h  oBarrier.h  oBinkPlayer.h  oCollisionObjectMiscChar.h  oCsManager.h  oCsPlayer.h  oCsProps.h  oCsTrigger.h  oDamage.h  oDialog.h  oDoc.h  oDocumentManager.h  oFocus.h  oGame.h  oGameInfo.h  oGameManager.h  oGuilds.h  oHelp.h  oInfo.h  oInformationManager.h  oInventory.h  oItem.h  oItemReact.h  oLogManager.h  oMagFrontier.h  oMagic.h  oMenuSavegame.h  oMenu_Help.h  oMenu_Main.h  oMenu_Status.h  oMission.h  oMobInter.h  oMusicZone.h  oNews.h  oNpc.h  oNpcMessages.h  oNpcStates.h  oObjFactory.h  (+166 more)
ZenGin/Gothic_I_Addon/: G1A.h  GlobalVariables.h  StaticsProperties.h
ZenGin/Gothic_I_Addon/API/: oAiHuman.h  oAiShoot.h  oAniCtrl.h  oBarrier.h  oBinkPlayer.h  oCollisionObjectMiscChar.h  oCsManager.h  oCsPlayer.h  oCsProps.h  oCsTrigger.h  oDamage.h  oDialog.h  oDoc.h  oDocumentManager.h  oFocus.h  oGame.h  oGameInfo.h  oGameManager.h  oGuilds.h  oHelp.h  oInfo.h  oInformationManager.h  oInventory.h  oItem.h  oItemReact.h  oLogManager.h  oMagFrontier.h  oMagic.h  oMenuSavegame.h  oMenu_Help.h  oMenu_Main.h  oMenu_Status.h  oMission.h  oMobInter.h  oMusicZone.h  oNews.h  oNpc.h  oNpcMessages.h  oNpcStates.h  oObjFactory.h  (+164 more)
ZenGin/Gothic_I_Classic/: G1.h  GlobalVariables.h  StaticsProperties.h
ZenGin/Gothic_I_Classic/API/: oAiHuman.h  oAiShoot.h  oAniCtrl.h  oBarrier.h  oBinkPlayer.h  oCollisionObjectMiscChar.h  oCsManager.h  oCsPlayer.h  oCsProps.h  oCsTrigger.h  oDamage.h  oDialog.h  oDoc.h  oDocumentManager.h  oFocus.h  oGame.h  oGameInfo.h  oGameManager.h  oGuilds.h  oHelp.h  oInfo.h  oInformationManager.h  oInventory.h  oItem.h  oItemReact.h  oLogManager.h  oMagFrontier.h  oMagic.h  oMenuSavegame.h  oMenu_Help.h  oMenu_Main.h  oMenu_Status.h  oMission.h  oMobInter.h  oMusicZone.h  oNews.h  oNpc.h  oNpcMessages.h  oNpcStates.h  oObjFactory.h  (+168 more)
